# sosse

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README  README.md  docker-compose.yml  manage.py  osse-admin  package-lock.json  package.json  pyproject.toml  requirements.txt  se.json  setup.py  sosse-admin  swagger-initializer.js  test_app.sh
.gitlab/: changelog_config.yml
.gitlab/merge_request_templates/: default.md
debian/: changelog  control  osse-crawler.service  osse-uwsgi.service  osse.conf  osse.install  rules  sosse-crawler.service  sosse-uwsgi.service  sosse.conf  sosse.install  sosse.postinst  uwsgi.ini
debian-bookworm/: changelog  sosse-uwsgi.service  sosse.conf  sosse.install  sosse.postinst
doc/: build_changelog.sh  build_check.sh  get_artifacts.py  requirements.txt
doc/source/: admin_ui.rst  administration.rst  archive.rst  authentication.rst  cli.rst  conf.py  config_file.rst  cookies.rst  crawl_guidelines.rst  documents.rst  domain_settings.rst  domains.rst  excluded_urls.rst  guides.rst  index.rst  install.rst  introduction.rst  mime_handlers.rst  mime_plugins.rst  permissions.rst  screenshots.rst  search_engines.rst  tags.rst  user_doc.rst  webhooks.rst
docker/: Makefile  Makefile.common  README.md  local.mk.example  pg_run.sh  run.sh
docker/bookworm-debian/: Dockerfile
docker/bookworm-debian-base/: Makefile
docker/bookworm-debian-test/: Dockerfile
docker/debian-base/: Dockerfile  Makefile
docker/debian-docker/: Dockerfile
docker/debian-pkg/: Dockerfile
docker/debian-pkg-test/: Dockerfile
docker/debian-test/: 99sid  Dockerfile  Makefile
myse/: settings.py  urls.py  wsgi.py
osse/: conf.py  settings.py  urls.py  wsgi.py
se/: 0002_search_vector.py  about.py  add_to_queue.py  admin.py  analytics.py  apps.py  archive.py  atom.py  browser.py  browser_chromium.py  browser_firefox.py  browser_request.py  browser_request_hack.py  browser_selenium.py  builtin.py  cached.py  collection.py  cookie.py  cookies_import.py  crawl_policy.py  crawl_policy_backup.py  crawl_queue.py  crawl_status.py  crawlers.py  csv.py  document.py  document_meta.py  domain.py  domain_setting.py  download.py  excluded_urls_import.py  favicon.py  forms.py  history.py  html.py  html_asset.py  html_cache.py  html_snapshot.py  login.py  mime_handler.py  (+66 more)
sosse/: conf.py  search_engines.json  settings.py  sosse_admin.py  test_runner.py  urls.py  wsgi.py
tests/: build_doc.sh  cookies.json  coverage.patch  doc_test.sh  docker_run.sh  document-ja.json  github-known_hosts  opensearch.xml  release.md  run_tests.sh  searchhistory.json  test_app.sh  vrt.md  wait_for_pg.sh
(+272 files in other folders)
